Fixed animations on safari

--- a/index.css
+++ b/index.css
@@ -52,7 +52,6 @@ body {
     width: 600px;
     height: 500px;
     position: relative;
-    transform-style: preserve-3d;
     transition: transform 2s ease-in-out;
     animation: jump-shaking 1s 2;
 }
@@ -62,6 +61,7 @@ body {
 }
 
 .part {
+    transform-style: preserve-3d;
     position: absolute;
     width: 600px;
     background-color: #ad2641;
@@ -153,9 +153,9 @@ body {
     top: 0;
     height: 500px;
     background-color: #74182a;
-    /* Blue */
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     z-index: 0;
+    transform-origin: top;
 }
 
 .bottom {
